[package]

name = "collada"
version = "0.0.1"
authors = ["Steve Jahns <s.t.jahns@gmail.com>"]

[dependencies]
log = "*"

[dependencies.RustyXML]
git = "https://github.com/Florob/RustyXML.git"

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath"

[dependencies.quaternion]
git = "https://github.com/PistonDevelopers/quaternion.git"
