[package]

name = "collada"
version = "0.0.1"
authors = ["Steve Jahns <s.t.jahns@gmail.com>"]
keywords = ["collada", "piston"]
description = "A library for parsing COLLADA documents for mesh, skeletal and animation data"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/piston_collada"
homepage = "https://github.com/PistonDevelopers/piston_collada"

[lib]

name = "collada"
path = "src/lib.rs"

[dependencies]

log = "*"
RustyXML = "0.1.*"
vecmath = "*"
quaternion = "*"