[package]

name = "collada"
version = "0.13.0"
authors = ["Steve Jahns <s.t.jahns@gmail.com>"]
keywords = ["collada", "3d", "format", "piston"]
description = "A library for parsing COLLADA documents for mesh, skeletal and animation data"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/piston_collada"
homepage = "https://github.com/PistonDevelopers/piston_collada"

[lib]

name = "collada"
path = "src/lib.rs"

[dependencies]

log = "0.4"
RustyXML = "0.1.1"
vecmath = "1.0.0"
quaternion = "0.4.0"
